feat: pre-aware beautifier; collapse span/p/code
- HtmlBeautifier: do not reformat inside <pre>…</pre>; tokenize tags
  outside <pre>; remove newline+indent before </span>, </p>, </code>.
- Config v2: mark missing/unreadable derived files; resolve paths
  relative to the config directory.
- DiscussionPostFormatter v4: surface diagnostics and keep code
  alignment; improved messages and output reporting.
- House Rules: enforce first-line filename header; aligned Eclipse
  templates with workspace settings.